# rag-systems

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  schemas.py
app/api/: __init__.py  deps.py  evaluate.py  health.py  ingest.py  logs.py  query.py
app/core/: __init__.py  embedders.py  exceptions.py  generation.py  ingestion.py  retrieval.py
app/db/: __init__.py  vector_store.py
app/eval/: __init__.py  dataset.py  runner.py  scorer.py
app/observability/: __init__.py  query_log.py
app/scripts/: __init__.py  ingest_demo.py  ingest_dir.py
data/eval/: sample.jsonl
data/raw/: sample.md
docs/: README.md
docs/00-design/: 01-vision.md  02-requirements.md  03-architecture.md  04-data-model.md  05-api-contract.md  glossary.md
docs/00-design/adrs/: 0001-vector-db-chromadb.md  0002-llm-provider-groq.md  0003-embedding-model.md  0004-chunking-strategy.md  0005-scoping-collections-vs-namespaces.md
docs/01-ingestion/: README.md  alternatives.md  concepts.md  references.md
docs/02-rag-pipeline/: README.md  alternatives.md  concepts.md  references.md
docs/03-retrieval-strategies/: README.md  alternatives.md  concepts.md  references.md
docs/04-evaluation/: README.md  alternatives.md  concepts.md  references.md
docs/05-observability-deployment/: README.md  alternatives.md  concepts.md  references.md
tests/: conftest.py  test_api.py  test_eval_dataset.py  test_eval_runner.py  test_ingestion.py  test_observability.py  test_retrieval.py  test_retrieval_integration.py
