[project]
name = "rag-systems"
version = "0.1.0"
description = "A production-shaped RAG service with retrieval, generation, and evaluation."
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # long lines: leave to formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts in tests

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "network: tests that hit external services (Groq, RAGAS)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
